[package]
name = "ds18b20"
version = "0.1.0"
edition = "2021"
authors = ["Junfeng Liu <fuchsnj@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Example of using one-wire-bus to read temperature from a DS18B20 sensor"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
embedded-hal = "1.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
embassy-executor = { version = "0.6.2", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-stm32 = { version = "0.1.0", features = [
    "defmt",
    "stm32h743ii",
    "time-driver-tim2",
    "exti",
    "memory-x",
    "unstable-pac",
    "chrono",
] }
embassy-time = "0.3.2"

one-wire-bus = { version = "0.2.0", path = "../../../one-wire-bus" }
